--- a/index.html
+++ b/index.html
@@ -17,9 +17,14 @@
             <img src="styles/img/Frame 6.png" class="lines_header">
         </div>
         <div class="high_text_image">
-            <!-- <h1 class="high_text">Монтаж натяжних стель</h1> -->
-            <img src="styles/img/image 8.png">
+            <h1 class="high_text">Монтаж натяжних стель</h1>
+            <h4 class="high_under_text">Розробка дизайну та освітлення<br>стельового простору</h4>
         </div>
+    </header>
+
+    <main>
+
+    </main>
 </body>
 
 </html>
