--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
     </header>
 
     <main>
-
+        <div class="main_chapter">
+            <h2 class="main_chapter_header">Ми пропонуємо сучасні профільні<br>системи та освітлення</h2>
+            <h3 class="main_chapter_specs">Профільні системи</h3>
+        </div>
     </main>
 </body>
 
