--- a/index.html
+++ b/index.html
@@ -24,9 +24,14 @@
 
     <main>
         <div class="main_chapter">
-            <h2 class="main_chapter_header">Ми пропонуємо сучасні профільні<br>системи та освітлення</h2>
-            <h3 class="main_chapter_specs">Профільні системи</h3>
+            <div class="main_chapter_box_header">
+                <h2 class="main_chapter_header">Ми пропонуємо сучасні профільні<br>системи та освітлення</h2>
+            </div>
+            <div class="main_chapter_box_specs">
+                <h3 class="main_chapter_specs">Профільні системи:</h3>
+            </div>
         </div>
+        <div class="yellow_line"></div>
     </main>
 </body>
 
