--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,28 @@
+<!DOCTYPE html>
 <html>
 
 <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="description" content="Web site created using create-react-app" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope&display=swap" rel="stylesheet">
+    <title>Superstelia</title>
 </head>
 
-<body style="background-color: #F2F0F0;">
+<body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+
     <header>
         <div class="div_header">
             <img src="styles/img/image 3.png" class="logo_header">
@@ -34,5 +48,4 @@
         <div class="yellow_line"></div>
     </main>
 </body>
-
-</html>
+</body
