--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 
-    <header>
+    <!-- <header>
         <div class="div_header">
             <img src="styles/img/image 3.png" class="logo_header">
             <img src="styles/img/material-symbols_call-outline-sharp.png" class="phone_header">
@@ -46,6 +46,5 @@
             </div>
         </div>
         <div class="yellow_line"></div>
-    </main>
+    </main> -->
 </body>
-</body
