--- a/public/index.html
+++ b/public/index.html
@@ -2,15 +2,6 @@
 <html>
 
 <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,12 +14,12 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 
-    <!--<header>
+    <header>
         <div class="div_header">
-            <img src="styles/img/image 3.png" class="logo_header">
-            <img src="styles/img/material-symbols_call-outline-sharp.png" class="phone_header">
+            <img src="img/image 3.png" class="logo_header">
+            <img src="img/material-symbols_call-outline-sharp.png" class="phone_header">
             <p class="phonenumber">+38 (095) 457-39-56</p>
-            <img src="styles/img/Frame 6.png" class="lines_header">
+            <img src="img/Frame 6.png" class="lines_header">
         </div>
         <div class="high_text_image">
             <h1 class="high_text">Монтаж натяжних стель</h1>
@@ -46,5 +37,17 @@
             </div>
         </div>
         <div class="yellow_line"></div>
-    </main> -->
+
+        <div class="main_list_box">
+            <div class="list_box">
+                <ul>
+                    <li>Hi</li>
+                    <li>Hi</li>
+                </ul>
+            </div>
+        </div>
+    </main>
 </body>
+<script src="script.js"></script>
+
+</html>
