--- a/public/index.html
+++ b/public/index.html
@@ -16,10 +16,10 @@
 
     <header>
         <div class="div_header">
-            <img src="img/image 3.png" class="logo_header">
-            <img src="img/material-symbols_call-outline-sharp.png" class="phone_header">
+            <img src="styles/img/image 3.png" class="logo_header">
+            <img src="styles/img/material-symbols_call-outline-sharp.png" class="phone_header">
             <p class="phonenumber">+38 (095) 457-39-56</p>
-            <img src="img/Frame 6.png" class="lines_header">
+            <img src="styles/img/Frame 6.png" class="lines_header">
         </div>
         <div class="high_text_image">
             <h1 class="high_text">Монтаж натяжних стель</h1>
@@ -41,8 +41,8 @@
         <div class="main_list_box">
             <div class="list_box">
                 <ul>
-                    <li>Hi</li>
-                    <li>Hi</li>
+                    <li></li>
+                    <li></li>
                 </ul>
             </div>
         </div>
