--- a/public/index.html
+++ b/public/index.html
@@ -41,8 +41,11 @@
         <div class="main_list_box">
             <div class="list_box">
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li onclick="showPhoto()">Тіньовий</li>
+                    <div class="list_first">
+                        <img src="styles/img/photo_2023-06-28 16.30.png">
+                    </div>
+                    <li>Резинова заглушка</li>
                 </ul>
             </div>
         </div>
