--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
         <div class="div_header">
             <img src="styles/img/image 3.png" class="logo_header">
             <img src="styles/img/material-symbols_call-outline-sharp.png" class="phone_header">
-            <p class="phonenumber">+38 (095) 457-39-56</p>
+            <p class="phonenumber"><a href="tel:+380954573956" style="text-decoration: none; color: black;">+38 (095) 457-39-56</a></p>
             <img src="styles/img/Frame 6.png" class="lines_header">
         </div>
         <div class="high_text_image">
@@ -43,6 +43,28 @@
                         <img src="styles/img/photo_2023-06-28 16.30.png">
                     </div>
                     <li>Резинова заглушка</li>
+                    <li>Безвставочний</li>
+                    <li>Парящий</li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="main_chapter">
+            <div class="main_chapter_box_specs">
+                <h3 class="main_chapter_specs">Освітлення:</h3>
+            </div>
+        </div>
+        <div class="yellow_line"></div>
+
+        <div class="main_list_box">
+            <div class="list_box">
+                <ul class="list">
+                    <li onclick="showPhoto()" class="list_li_first">Трекові системи</li>
+                    <div class="list_first" id="listFirst">
+                        <img src="styles/img/photo_2023-06-28 16.30.png">
+                    </div>
+                    <li>Весь спектр люстр та світильників</li>
+                    <li>Лінійне освітлення</li>
                 </ul>
             </div>
         </div>
