--- a/public/index.html
+++ b/public/index.html
@@ -38,33 +38,57 @@
         <div class="main_list_box">
             <div class="list_box">
                 <ul class="list">
-                    <li onclick="showPhoto()" class="list_li_first">Тіньовий</li>
+                    <li onclick="showPhoto()" class="list_li_first">
+                        <img src="styles/img/list.gif">
+                        <p>Тіньовий</p>
+                    </li>
                     <div class="list_first" id="listFirst">
                         <img src="styles/img/photo_2023-06-28 16.30.png">
                     </div>
-                    <li>Резинова заглушка</li>
-                    <li>Безвставочний</li>
-                    <li>Парящий</li>
+
+                    <li>
+                        <img src="styles/img/list.gif">
+                        <p>Резинова заглушка</p>
+                    </li>
+
+                    <li>
+                        <img src="styles/img/list.gif">
+                        Безвставочний
+                    </li>
+
+                    <li>
+                        <img src="styles/img/list.gif">
+                        <p>Парящий</p>
+                    </li>
                 </ul>
             </div>
         </div>
 
-        <div class="main_chapter">
-            <div class="main_chapter_box_specs">
-                <h3 class="main_chapter_specs">Освітлення:</h3>
-            </div>
+        <div class="main_chapter_second">
+                <h3 class="main_chapter_specs_second">
+                    <p class="align">Освітлення:</p>
+                </h3>
         </div>
         <div class="yellow_line"></div>
 
         <div class="main_list_box">
             <div class="list_box">
                 <ul class="list">
-                    <li onclick="showPhoto()" class="list_li_first">Трекові системи</li>
+                    <li onclick="showPhoto()" class="list_li_first">
+                        <img src="styles/img/list.gif">
+                        <p>Трекові системи</p>
+                    </li>
                     <div class="list_first" id="listFirst">
-                        <img src="styles/img/photo_2023-06-28 16.30.png">
+                        <img src="styles/img/list.gif">
                     </div>
-                    <li>Весь спектр люстр та світильників</li>
-                    <li>Лінійне освітлення</li>
+                    <li>
+                        <img src="styles/img/list.gif">
+                        <p>Весь спектр люстр та світильників</p>
+                    </li>
+                    <li>
+                        <img src="styles/img/list.gif">
+                        <p>Лінійне освітлення</p>
+                    </li>
                 </ul>
             </div>
         </div>
