--- a/public/index.html
+++ b/public/index.html
@@ -92,6 +92,22 @@
                 </ul>
             </div>
         </div>
+
+        <div class="main_chapter">
+            <div class="main_chapter_box_header">
+                <h2 class="main_chapter_header">Ми - компанія, яка займається<br>монтаженим натяжних стель</h2>
+            </div>
+            <div class="main_chapter_box_specs">
+                <h3 class="main_chapter_specs">Наші цінності:</h3>
+            </div>
+        </div>
+        <div class="yellow_line"></div>
+
+        <div class="main_list_box">
+            <div class="list_box">
+                
+            </div>
+        </div>
     </main>
     <script src="script.js"></script>
 </body>
