--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,8 @@
         <div class="yellow_line"></div>
 
         <div class="main_list_box">
+            <div class="fifty"></div>
+
             <div class="list_box">
                 <ul class="list">
                     <li onclick="showPhoto()" class="list_li_first">
@@ -64,14 +66,20 @@
             </div>
         </div>
 
-        <div class="main_chapter_second">
-                <h3 class="main_chapter_specs_second">
+        <div class="main_chapter">
+            <div class="main_chapter_box_header"></div>
+
+            <div class="main_chapter_box_specs">
+                <h3 class="main_chapter_specs">
                     <p class="align">Освітлення:</p>
                 </h3>
+            </div>
         </div>
         <div class="yellow_line"></div>
 
         <div class="main_list_box">
+            <div class="fifty"></div>
+
             <div class="list_box">
                 <ul class="list">
                     <li onclick="showPhoto()" class="list_li_first">
@@ -100,12 +108,27 @@
             <div class="main_chapter_box_specs">
                 <h3 class="main_chapter_specs">Наші цінності:</h3>
             </div>
+
         </div>
         <div class="yellow_line"></div>
 
         <div class="main_list_box">
+            <div class="fifty"></div>
             <div class="list_box">
-                
+                <ul class="list_specs">
+                    <li class="list_li_specs">
+                        <img src="styles/img/true.png">
+                        <p>Чесність</p>
+                    </li>
+                    <li class="list_li_specs">
+                        <img src="styles/img/clean.png">
+                        <p>Чистота</p>
+                    </li>
+                    <li class="list_li_specs">
+                        <img src="styles/img/modern.png">
+                        <p>Сучасність</p>
+                    </li>
+                </ul>
             </div>
         </div>
     </main>
