--- a/public/index.html
+++ b/public/index.html
@@ -112,7 +112,7 @@
         </div>
         <div class="yellow_line"></div>
 
-        <div class="main_list_box">
+        <div class="main_list_box_third">
             <div class="fifty"></div>
             <div class="list_box">
                 <ul class="list_specs">
@@ -129,8 +129,35 @@
                         <p>Сучасність</p>
                     </li>
                 </ul>
+                <img src="styles/img/telegram-cloud-photo-size-2-1593125115685611434-c 1.png">
             </div>
         </div>
+
+        <div class="main_chapter">
+            <div class="main_chapter_box_header">
+                <h2 class="main_chapter_header">Етапи нашої роботи</h2>
+            </div>
+            <div class="main_chapter_box_specs">
+                <h3 class="main_chapter_specs">01</h3>
+            </div>
+
+        </div>
+        <div class="yellow_line"></div>
+
+        <div class="main_list_box_third">
+            <div class="fifty"></div>
+            <div class="list_box">
+                <div class="black_box">
+                    <ul class="list_specs">
+                        <li class="list_li_specs">
+                            <img src="styles/img/material-symbols_edgesensor-high-rounded.png">
+                            <p class="black_box_text">Дзвінок</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
     </main>
     <script src="script.js"></script>
 </body>
