--- a/public/index.html
+++ b/public/index.html
@@ -101,16 +101,16 @@
             </div>
         </div>
 
-        <div class="main_chapter">
-            <div class="main_chapter_box_header">
-                <h2 class="main_chapter_header">Ми - компанія, яка займається<br>монтаженим натяжних стель</h2>
+        <div style="display: flex; align-items: flex-end;" class="container">
+            <div style="flex-grow: 1">
+                <h2 style="margin: 0;" class="main-chapter-header-second">Ми - компанія, яка займається<br>монтаженим натяжних стель</h2>
             </div>
-            <div class="main_chapter_box_specs">
-                <h3 class="main_chapter_specs">Наші цінності:</h3>
+            <div>
+                <h3 style="margin: 0;" class="main-chapter-description-second">Наші цінності:</h3>
             </div>
-
         </div>
-        <div class="yellow_line"></div>
+
+        <div class="yellow_line container" style="margin-top: 10px;"></div>
 
         <div class="main_list_box_third">
             <div class="fifty"></div>
@@ -152,6 +152,19 @@
         </div>
         
         <div class="yellow_line"></div>
+
+        <div class="box">
+            <div class="box-description">
+                <div style="display: flex; padding: 50px 50px 0 50px;">
+                    <img src="styles/img/material-symbols_edgesensor-high-rounded.png">
+                    <span style="flex-grow: 1;" class="title">Дзвінок</span>
+                </div>
+                <p>Отримуємо від вас дзвінок та домовляємось про зустріч та заміри</p>
+            </div>
+            <div class="box-image">
+
+            </div>
+        </div>
 
         <div class="main_list_box_fourth">
             <div class="fifty"></div>
