--- a/public/index.html
+++ b/public/index.html
@@ -12,133 +12,131 @@
 
 <body>
     <header>
-        <div class="div_header">
-            <img src="styles/img/image 3.png" class="logo_header">
-            <img src="styles/img/material-symbols_call-outline-sharp.png" class="phone_header">
-            <p class="phonenumber"><a href="tel:+380954573956" style="text-decoration: none; color: black;">+38 (095) 457-39-56</a></p>
-            <img src="styles/img/Frame 6.png" class="lines_header">
+        <div class="header__div">
+            <img src="styles/img/logo.png" class="header__logo">
+            <img src="styles/img/phone.png" class="header__phone">
+            <p class="header__phonenumber"><a href="tel:+380954573956">+38 (095) 457-39-56</a></p>
+            <img src="styles/img/lines.png" class="header__lines">
         </div>
-        <div class="high_text_image">
-            <h1 class="high_text">Монтаж натяжних стель</h1>
-            <h4 class="high_under_text">Розробка дизайну та освітлення<br>стельового простору</h4>
+        <div>
+            <h1 class="header__highText">Монтаж натяжних стель</h1>
+            <h4 class="header__underText">Розробка дизайну та освітлення<br>стельового простору</h4>
         </div>
     </header>
 
     <main>
-        <div class="main_chapter">
-            <div class="main_chapter_box_header">
-                <h2 class="main_chapter_header">Ми пропонуємо сучасні профільні<br>системи та освітлення</h2>
+        <div class="chapter">
+            <div class="chapter__item">
+                <h2 class="chapter__item-text">Ми пропонуємо сучасні профільні<br>системи та освітлення</h2>
             </div>
-            <div class="main_chapter_box_specs">
-                <h3 class="main_chapter_specs">Профільні системи:</h3>
+            <div class="chapter__name">
+                <h3 class="chapter__name-text">Профільні системи:</h3>
             </div>
         </div>
         <div class="yellow_line"></div>
 
-        <div class="main_list_box">
+        <div class="list-box">
             <div class="fifty"></div>
 
-            <div class="list_box">
-                <ul class="list">
-                    <li onclick="showPhoto()" class="list_li_first">
+            <div class="list">
+                <ul class="">
+                    <li onclick="showPhoto()" class="list__item">
                         <img src="styles/img/list.gif">
-                        <p class="characteristics">Тіньовий</p>
+                        <p class="list__item-text">Тіньовий</p>
                     </li>
-                    <div class="list_first" id="listFirst">
+                    <div class="list__item-active" id="listFirst">
                         <img src="styles/img/photo_2023-06-28 16.30.png">
                     </div>
 
                     <li>
                         <img src="styles/img/list.gif">
-                        <p class="characteristics">Резинова заглушка</p>
+                        <p class="list__item-text">Резинова заглушка</p>
                     </li>
 
                     <li>
                         <img src="styles/img/list.gif">
-                        <p class="characteristics">Безвставочний</p>
+                        <p class="list__item-text">Безвставочний</p>
                     </li>
 
                     <li>
                         <img src="styles/img/list.gif">
-                        <p class="characteristics">Парящий</p>
+                        <p class="list__item-text">Парящий</p>
                     </li>
                 </ul>
             </div>
         </div>
 
-        <div class="main_chapter">
-            <div class="main_chapter_box_header"></div>
+        <div class="chapter">
+            <div class="chapter__item"></div>
 
-            <div class="main_chapter_box_specs">
-                <h3 class="main_chapter_specs">
-                    <p class="align">Освітлення:</p>
+            <div class="chapter__name">
+                <h3 class="chapter__name-text">
+                    <p class="chapter__name-text-align">Освітлення:</p>
                 </h3>
             </div>
         </div>
         <div class="yellow_line"></div>
 
-        <div class="main_list_box">
+        <div class="list-box">
             <div class="fifty"></div>
 
-            <div class="list_box">
-                <ul class="list">
-                    <li onclick="showPhoto()" class="list_li_first">
+            <div class="list">
+                <ul class="">
+                    <li class="list__item">
                         <img src="styles/img/list.gif">
-                        <p class="characteristics">Трекові системи</p>
-                    </li>
-                    <div class="list_first" id="listFirst">
-                        <img src="styles/img/list.gif">
-                    </div>
-                    <li>
-                        <img src="styles/img/list.gif">
-                        <p class="characteristics">Весь спектр люстр та світильників</p>
+                        <p class="list__item-text">Трекові системи</p>
                     </li>
                     <li>
                         <img src="styles/img/list.gif">
-                        <p class="characteristics">Лінійне освітлення</p>
+                        <p class="list__item-text">Весь спектр люстр та світильників</p>
+                    </li>
+                    <li>
+                        <img src="styles/img/list.gif">
+                        <p class="list__item-text">Лінійне освітлення</p>
                     </li>
                 </ul>
             </div>
         </div>
 
-        <div style="display: flex; align-items: flex-end;" class="container">
-            <div style="flex-grow: 1">
-                <h2 style="margin: 0;" class="main-chapter-header-second">Ми - компанія, яка займається<br>монтаженим натяжних стель</h2>
+        <div class="chapter">
+            <div class="chapter__item">
+                <h2 style="margin: 0;" class="chapter__item-text">Ми - компанія, яка займається<br>монтаженим натяжних стель</h2>
             </div>
-            <div>
-                <h3 style="margin: 0;" class="main-chapter-description-second">Наші цінності:</h3>
+            <div class="chapter__name">
+                <h3 class="chapter__name-text">Наші цінності:</h3>
             </div>
         </div>
 
-        <div class="yellow_line container" style="margin-top: 10px;"></div>
+        <div class="yellow_line chapter" style="margin-top: 10px;"></div>
 
-        <div class="main_list_box_third">
+        <div class="list-box">
             <div class="fifty"></div>
-            <div class="list_box">
-                <ul class="list_specs">
-                    <li class="list_li_specs">
-                        <img src="styles/img/true.png">
-                        <p class="characteristics">Чесність</p>
+
+            <div class="list">
+                <ul class="list__box-horizontal">
+                    <li class="list__item-horizontal">
+                        <img src="styles/img/truth.png">
+                        <p class="list__item-text">Чесність</p>
                     </li>
-                    <li class="list_li_specs">
+                    <li class="list__item-horizontal">
                         <img src="styles/img/clean.png">
-                        <p class="characteristics">Чистота</p>
+                        <p class="list__item-text">Чистота</p>
                     </li>
-                    <li class="list_li_specs">
+                    <li class="list__item-horizontal">
                         <img src="styles/img/modern.png">
-                        <p class="characteristics">Сучасність</p>
+                        <p class="list__item-text">Сучасність</p>
                     </li>
                 </ul>
-                <img src="styles/img/telegram-cloud-photo-size-2-1593125115685611434-c 1.png">
+                <img src="styles/img/Andrew.png">
             </div>
         </div>
 
-        <div class="main_chapter">
-            <div class="main_chapter_box_header">
-                <h2 class="main_chapter_header">Етапи нашої роботи</h2>
+        <div class="chapter">
+            <div class="chapter__item">
+                <h2 class="chapter__item-text">Етапи нашої роботи</h2>
             </div>
-            <div class="main_chapter_box_specs">
-                <h3 class="main_chapter_specs">01</h3>
+            <div class="chapter__name">
+                <h3 class="chapter__name-text">01</h3>
             </div>
             <!-- <ul style="list-style-type: none; padding: 0;">
                 <li style="display: inline-flex; margin-right: 10px; padding: 0;">
@@ -156,7 +154,7 @@
         <div class="box">
             <div class="box-description">
                 <div style="display: flex; padding: 50px 50px 0 50px;">
-                    <img src="styles/img/material-symbols_edgesensor-high-rounded.png">
+                    <img src="styles/img/call.png">
                     <span style="flex-grow: 1;" class="title">Дзвінок</span>
                 </div>
                 <p>Отримуємо від вас дзвінок та домовляємось про зустріч та заміри</p>
