Remade all styles to BEM, made some new chapter and remade all to flex

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
         <div class="header__div">
             <img src="styles/img/logo.png" class="header__logo">
             <img src="styles/img/phone.png" class="header__phone">
-            <p class="header__phonenumber"><a href="tel:+380954573956">+38 (095) 457-39-56</a></p>
+            <p class="header__phonenumber"><a href="tel:+380954573956" style="text-decoration: none; color: black;">+38 (095) 457-39-56</a></p>
             <img src="styles/img/lines.png" class="header__lines">
         </div>
         <div>
@@ -27,7 +27,7 @@
     <main>
         <div class="chapter">
             <div class="chapter__item">
-                <h2 class="chapter__item-text">Ми пропонуємо сучасні профільні<br>системи та освітлення</h2>
+                <h2 class="chapter__item-text">Ми пропонуємо сучасні профільні системи та освітлення</h2>
             </div>
             <div class="chapter__name">
                 <h3 class="chapter__name-text">Профільні системи:</h3>
@@ -35,8 +35,7 @@
         </div>
         <div class="yellow_line"></div>
 
-        <div class="list-box">
-            <div class="fifty"></div>
+        <div class="chapter" style="flex-direction: row-reverse">
 
             <div class="list">
                 <ul class="">
@@ -77,9 +76,7 @@
         </div>
         <div class="yellow_line"></div>
 
-        <div class="list-box">
-            <div class="fifty"></div>
-
+        <div class="chapter" style="flex-direction: row-reverse">
             <div class="list">
                 <ul class="">
                     <li class="list__item">
@@ -100,18 +97,16 @@
 
         <div class="chapter">
             <div class="chapter__item">
-                <h2 style="margin: 0;" class="chapter__item-text">Ми - компанія, яка займається<br>монтаженим натяжних стель</h2>
+                <h2 style="margin: 0;" class="chapter__item-text">Ми - компанія, яка займається монтаженим натяжних стель</h2>
             </div>
             <div class="chapter__name">
                 <h3 class="chapter__name-text">Наші цінності:</h3>
             </div>
         </div>
 
-        <div class="yellow_line chapter" style="margin-top: 10px;"></div>
+        <div class="yellow_line chapter"></div>
 
-        <div class="list-box">
-            <div class="fifty"></div>
-
+        <div class="chapter" style="flex-direction: row-reverse">
             <div class="list">
                 <ul class="list__box-horizontal">
                     <li class="list__item-horizontal">
@@ -136,39 +131,31 @@
                 <h2 class="chapter__item-text">Етапи нашої роботи</h2>
             </div>
             <div class="chapter__name">
-                <h3 class="chapter__name-text">01</h3>
+                <h3 class="chapter__name-text" style="font-size: 90px">01</h3>
             </div>
-            <!-- <ul style="list-style-type: none; padding: 0;">
-                <li style="display: inline-flex; margin-right: 10px; padding: 0;">
-                    <h2 class="main_chapter_header">Етапи нашої роботи</h2>
-                </li>
-                <li style="display: inline-flex; margin-right: 10px; padding: 0;">
-                    <h3 class="main_chapter_specs">01</h3>
-                </li>
-            </ul> -->
-
         </div>
         
         <div class="yellow_line"></div>
 
-        <div class="box">
-            <div class="box-description">
-                <div style="display: flex; padding: 50px 50px 0 50px;">
-                    <img src="styles/img/call.png">
-                    <span style="flex-grow: 1;" class="title">Дзвінок</span>
+        <div class="chapter" style="flex-direction: row-reverse">
+            <div class="card-box">
+                <div class="card__item">
+                    <div class="card__item-box">
+                        <img src="styles/img/call.png">
+                        <span class="card__item-title">Дзвінок</span>
+                    </div>
+                    <p class="card__item-text">Отримуємо від вас дзвінок та домовляємось про зустріч та заміри</p>
                 </div>
-                <p>Отримуємо від вас дзвінок та домовляємось про зустріч та заміри</p>
-            </div>
-            <div class="box-image">
-
+                <div>
+                    <img src="styles/img/image%209.png" class="card-image">
+                </div>
             </div>
         </div>
 
 
-        <div class="main_chapter">
-            <div class="fifty"></div>
-            <div class="main_chapter_box_specs">
-                <h3 class="main_chapter_specs">02</h3>
+        <div class="chapter" style="flex-direction: row-reverse">
+            <div class="chapter__name">
+                <h3 class="chapter__name-text" style="font-size: 90px">02</h3>
             </div>
         </div>
 
@@ -177,11 +164,25 @@
             <div class="yellow_line_half" style="width: 64%;"></div>
         </div>
 
+        <div class="chapter" style="flex-direction: row-reverse">
+            <div class="card-box">
+                <div class="card__item">
+                    <div class="card__item-box">
+                        <img src="styles/img/pencil.png">
+                        <span class="card__item-title">Заміри</span>
+                    </div>
+                    <p class="card__item-text">До вас приходить наш спеціаліст та проводить замір майбутнього обєкту. А також проводить консультацію та вислуховує ваші побажання</p>
+                </div>
+                <div>
+                    <img  class="card-image" src="styles/img/image%2012.png">
+                </div>
+            </div>
+        </div>
 
-        <div class="main_chapter">
-            <div class="fifty"></div>
-            <div class="main_chapter_box_specs">
-                <h3 class="main_chapter_specs">03</h3>
+
+        <div class="chapter" style="flex-direction: row-reverse">
+            <div class="chapter__name">
+                <h3 class="chapter__name-text" style="font-size: 90px">03</h3>
             </div>
         </div>
 
@@ -190,11 +191,25 @@
             <div class="yellow_line_half" style="width: 64%;"></div>
         </div>
 
+        <div class="chapter" style="flex-direction: row-reverse">
+            <div class="card-box">
+                <div class="card__item">
+                    <div class="card__item-box">
+                        <img src="styles/img/instruments.png">
+                        <span class="card__item-title">Монтаж</span>
+                    </div>
+                    <p class="card__item-text">У завчасно затверджений час, до вас приходять наші майстри. Та чисто і якісно виконуюють свою роботу, без зайвих незручностей  для вас</p>
+                </div>
+                <div>
+                    <img class="card-image" src="styles/img/image%2011.png">
+                </div>
+            </div>
+        </div>
 
-        <div class="main_chapter">
-            <div class="fifty"></div>
-            <div class="main_chapter_box_specs">
-                <h3 class="main_chapter_specs">04</h3>
+
+        <div class="chapter" style="flex-direction: row-reverse">
+            <div class="chapter__name">
+                <h3 class="chapter__name-text" style="font-size: 90px">04</h3>
             </div>
         </div>
 
@@ -203,10 +218,25 @@
             <div class="yellow_line_half" style="width: 64%;"></div>
         </div>
 
+        <div class="chapter" style="flex-direction: row-reverse">
+            <div class="card-box">
+                <div class="card__item">
+                    <div class="card__item-box">
+                        <img src="styles/img/result.png">
+                        <span class="card__item-title">Результат</span>
+                    </div>
+                    <p class="card__item-text">Здача обєкту з урахуванням ваших побажань та без зайвих "сюрпризів"</p>
+                </div>
+                <div>
+                    <img class="card-image" src="styles/img/image%2010.png">
+                </div>
+            </div>
+        </div>
 
-        <div class="main_chapter">
-            <div class="main_chapter_box_header">
-                <h2 class="main_chapter_header">Інформація про об'єкти</h2>
+
+        <div class="chapter" style="flex-direction: row-reverse">
+            <div class="chapter__name">
+                <h2 class="chapter__name-text">Інформація про об'єкти</h2>
             </div>
         </div>
         
@@ -215,7 +245,6 @@
     </main>
 
     <footer>
-        <div class="black_box_footer"></div>
     </footer>
     <script src="script.js"></script>
 </body>
