started to make slider

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,9 @@
         <div class="header__div">
             <img src="styles/img/logo.png" class="header__logo">
             <img src="styles/img/phone.png" class="header__phone">
-            <p class="header__phonenumber"><a href="tel:+380954573956" style="text-decoration: none; color: black;">+38 (095) 457-39-56</a></p>
+            <p class="header__phonenumber">
+                <a href="tel:+380954573956" style="text-decoration: none; color: black;">+38 (095) 457-39-56</a>
+            </p>
             <img src="styles/img/lines.png" class="header__lines">
         </div>
         <div>
@@ -37,29 +39,29 @@
 
         <div class="chapter" style="flex-direction: row-reverse">
 
-            <div class="list">
+            <div class="chapter__list">
                 <ul class="">
-                    <li onclick="showPhoto()" class="list__item">
+                    <li onclick="showPhoto()" class="chapter__list__item">
                         <img src="styles/img/list.gif">
-                        <p class="list__item-text">Тіньовий</p>
+                        <p class="chapter__list__item-text">Тіньовий</p>
                     </li>
-                    <div class="list__item-active" id="listFirst">
+                    <div class="chapter__list__item-active" id="listFirst">
                         <img src="styles/img/photo_2023-06-28 16.30.png">
                     </div>
 
                     <li>
                         <img src="styles/img/list.gif">
-                        <p class="list__item-text">Резинова заглушка</p>
+                        <p class="chapter__list__item-text">Резинова заглушка</p>
                     </li>
 
                     <li>
                         <img src="styles/img/list.gif">
-                        <p class="list__item-text">Безвставочний</p>
+                        <p class="chapter__list__item-text">Безвставочний</p>
                     </li>
 
                     <li>
                         <img src="styles/img/list.gif">
-                        <p class="list__item-text">Парящий</p>
+                        <p class="chapter__list__item-text">Парящий</p>
                     </li>
                 </ul>
             </div>
@@ -77,19 +79,19 @@
         <div class="yellow_line"></div>
 
         <div class="chapter" style="flex-direction: row-reverse">
-            <div class="list">
+            <div class="chapter__list">
                 <ul class="">
-                    <li class="list__item">
+                    <li class="chapter__list__item">
                         <img src="styles/img/list.gif">
-                        <p class="list__item-text">Трекові системи</p>
+                        <p class="chapter__list__item-text">Трекові системи</p>
                     </li>
                     <li>
                         <img src="styles/img/list.gif">
-                        <p class="list__item-text">Весь спектр люстр та світильників</p>
+                        <p class="chapter__list__item-text">Весь спектр люстр та світильників</p>
                     </li>
                     <li>
                         <img src="styles/img/list.gif">
-                        <p class="list__item-text">Лінійне освітлення</p>
+                        <p class="chapter__list__item-text">Лінійне освітлення</p>
                     </li>
                 </ul>
             </div>
@@ -107,19 +109,19 @@
         <div class="yellow_line chapter"></div>
 
         <div class="chapter" style="flex-direction: row-reverse">
-            <div class="list">
-                <ul class="list__box-horizontal">
-                    <li class="list__item-horizontal">
+            <div class="chapter__list">
+                <ul class="chapter__list-box-horizontal">
+                    <li class="chapter__list__item-horizontal">
                         <img src="styles/img/truth.png">
-                        <p class="list__item-text">Чесність</p>
+                        <p class="chapter__list__item-text">Чесність</p>
                     </li>
-                    <li class="list__item-horizontal">
+                    <li class="chapter__list__item-horizontal">
                         <img src="styles/img/clean.png">
-                        <p class="list__item-text">Чистота</p>
+                        <p class="chapter__list__item-text">Чистота</p>
                     </li>
-                    <li class="list__item-horizontal">
+                    <li class="chapter__list__item-horizontal" style="margin: 0">
                         <img src="styles/img/modern.png">
-                        <p class="list__item-text">Сучасність</p>
+                        <p class="chapter__list__item-text">Сучасність</p>
                     </li>
                 </ul>
                 <img src="styles/img/Andrew.png">
@@ -235,12 +237,35 @@
 
 
         <div class="chapter" style="flex-direction: row-reverse">
-            <div class="chapter__name">
-                <h2 class="chapter__name-text">Інформація про об'єкти</h2>
+            <div class="chapter__item">
+                <h2 class="chapter__item-text">Інформація про об'єкти</h2>
             </div>
         </div>
         
         <div class="yellow_line"></div>
+
+        <div class="chapter" style="flex-direction: row-reverse;">
+            <div class="chapter__list">
+                <ul class="chapter__list-box-horizontal">
+                    <img src="styles/img/left.png" style="margin-right: 20px">
+                    <img src="styles/img/right.png">
+                </ul>
+            </div>
+        </div>
+
+        <div class="slider">
+            <div class="slider__item">
+                <img class="slider__item-photo" src="styles/img/sliderPhoto1.png">
+                <div style="margin: 33px;">
+                    <span class="slider__item-name">
+                        Збір всієї необхідної супровідної вантаж документації, страхування, розмитнення і т.д.
+                    </span>
+                    <div class="slider__item-whiteLine"></div>
+                    <p class="slider__item-text">Збір всієї необхідної супровідної вантаж документації, страхування, розмитнення і т.д.</p>
+                </div>
+
+            </div>
+        </div>
 
     </main>
 
