Ended Laptop version

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     </header>
 
     <main>
-        <div class="chapter">
+        <div class="chapter" style="margin-top: 15em;">
             <div class="chapter__item">
                 <h2 class="chapter__item-text">Ми пропонуємо сучасні профільні системи та освітлення</h2>
             </div>
@@ -265,11 +265,43 @@
                 </div>
 
             </div>
+
+            <div class="slider__item">
+                <img class="slider__item-photo" src="styles/img/sliderPhoto1.png">
+                <div style="margin: 33px;">
+                    <span class="slider__item-name">
+                        Збір всієї необхідної супровідної вантаж документації, страхування, розмитнення і т.д.
+                    </span>
+                    <div class="slider__item-whiteLine"></div>
+                    <p class="slider__item-text">Збір всієї необхідної супровідної вантаж документації, страхування, розмитнення і т.д.</p>
+                </div>
+
+            </div>
+
+            <div class="slider__item">
+                <img class="slider__item-photo" src="styles/img/sliderPhoto1.png">
+                <div style="margin: 33px;">
+                    <span class="slider__item-name">
+                        Збір всієї необхідної супровідної вантаж документації, страхування, розмитнення і т.д.
+                    </span>
+                    <div class="slider__item-whiteLine"></div>
+                    <p class="slider__item-text">Збір всієї необхідної супровідної вантаж документації, страхування, розмитнення і т.д.</p>
+                </div>
+
+            </div>
         </div>
 
     </main>
 
     <footer>
+        <div class="footer">
+            <h2 class="footer__name">Контакти</h2>
+            <ul class="footer__link">
+                <li class="footer__link-phone"><img src="styles/img/phone.png"><a href="tel:+380954573956">+38 (095) 457-39-56</a></li>
+                <li class="footer__link-instagram"><img src="styles/img/instagram.png"><a href="">superstelya777</a></li>
+            </ul>
+            <img src="styles/img/up.png" class="footer__button">
+        </div>
     </footer>
     <script src="script.js"></script>
 </body>
