--- a/public/index.html
+++ b/public/index.html
@@ -297,8 +297,8 @@
         <div class="footer">
             <h2 class="footer__name">Контакти</h2>
             <ul class="footer__link">
-                <li class="footer__link-phone"><img src="styles/img/phone.png"><a href="tel:+380954573956">+38 (095) 457-39-56</a></li>
-                <li class="footer__link-instagram"><img src="styles/img/instagram.png"><a href="">superstelya777</a></li>
+                <li class="footer__link-phone"><img src="styles/img/phone.png"><a href="tel:+380954573956" style="color: white; text-decoration: none;">+38 (095) 457-39-56</a></li>
+                <li class="footer__link-instagram"><img src="styles/img/instagram.png"><a href="https://www.instagram.com/superstelya777/" style="color: white; text-decoration: none;">superstelya777</a></li>
             </ul>
             <img src="styles/img/up.png" class="footer__button">
         </div>
