--- a/public/index.html
+++ b/public/index.html
@@ -37,32 +37,41 @@
         </div>
         <div class="yellow_line"></div>
 
-        <div class="chapter" style="flex-direction: row-reverse">
+        <div class="chapter" style="flex-direction: row-reverse; width: 60%;">
 
             <div class="chapter__list">
                 <ul class="">
-                    <li onclick="showPhoto()" class="chapter__list__item">
-                        <img src="styles/img/list.gif">
+                    <li onclick="showPhotoFirst()" class="chapter__list__item">
+                        <img src="styles/img/list.gif" id="listFirstImage" class="chapter__list__item-image">
                         <p class="chapter__list__item-text">Тіньовий</p>
                     </li>
-                    <div class="chapter__list__item-active" id="listFirst">
+                    <div class="chapter__list__item-active-first" id="listFirst">
                         <img src="styles/img/photo_2023-06-28 16.30.png">
                     </div>
 
-                    <li>
-                        <img src="styles/img/list.gif">
+                    <li onclick="showPhotoSecond()">
+                        <img src="styles/img/list.gif" id="listSecondImage">
                         <p class="chapter__list__item-text">Резинова заглушка</p>
                     </li>
+                    <div class="chapter__list__item-active-second" id="listSecond">
+                        <img src="styles/img/photo_2023-06-28 16.30.png">
+                    </div>
 
-                    <li>
-                        <img src="styles/img/list.gif">
+                    <li onclick="showPhotoThird()">
+                        <img src="styles/img/list.gif" id="listThirdImage">
                         <p class="chapter__list__item-text">Безвставочний</p>
                     </li>
+                    <div class="chapter__list__item-active-third" id="listThird">
+                        <img src="styles/img/photo_2023-06-28 16.30.png">
+                    </div>
 
-                    <li>
-                        <img src="styles/img/list.gif">
+                    <li onclick="showPhotoFourth()">
+                        <img src="styles/img/list.gif" id="listFourthImage">
                         <p class="chapter__list__item-text">Парящий</p>
                     </li>
+                    <div class="chapter__list__item-active-fourth" id="listFourth">
+                        <img src="styles/img/photo_2023-06-28 16.30.png">
+                    </div>
                 </ul>
             </div>
         </div>
@@ -78,21 +87,30 @@
         </div>
         <div class="yellow_line"></div>
 
-        <div class="chapter" style="flex-direction: row-reverse">
+        <div class="chapter" style="flex-direction: row-reverse; width: 60%;">
             <div class="chapter__list">
                 <ul class="">
-                    <li class="chapter__list__item">
-                        <img src="styles/img/list.gif">
+                    <li class="chapter__list__item" onclick="showPhotoFifth()">
+                        <img src="styles/img/list.gif" id="listFifthImage">
                         <p class="chapter__list__item-text">Трекові системи</p>
                     </li>
-                    <li>
-                        <img src="styles/img/list.gif">
-                        <p class="chapter__list__item-text">Весь спектр люстр та світильників</p>
+                    <div class="chapter__list__item-active-fourth" id="listFifth">
+                        <img src="styles/img/photo_2023-06-28 16.30.png">
+                    </div>
+                    <li onclick="showPhotoSixth()">
+                        <img src="styles/img/list.gif" id="listSixthImage">
+                        <p class="chapter__list__item-text">Весь спектр люстр <br>та світильників</p>
                     </li>
-                    <li>
-                        <img src="styles/img/list.gif">
+                    <div class="chapter__list__item-active-fourth" id="listSixth">
+                        <img src="styles/img/photo_2023-06-28 16.30.png">
+                    </div>
+                    <li onclick="showPhotoSeventh()">
+                        <img src="styles/img/list.gif" id="listSeventhImage">
                         <p class="chapter__list__item-text">Лінійне освітлення</p>
                     </li>
+                    <div class="chapter__list__item-active-fourth" id="listSeventh">
+                        <img src="styles/img/photo_2023-06-28 16.30.png">
+                    </div>
                 </ul>
             </div>
         </div>
@@ -247,13 +265,25 @@
         <div class="chapter" style="flex-direction: row-reverse;">
             <div class="chapter__list">
                 <ul class="chapter__list-box-horizontal">
-                    <img src="styles/img/left.png" style="margin-right: 20px">
-                    <img src="styles/img/right.png">
+                    <img src="styles/img/left.png" style="margin-right: 20px" class="previous-btn">
+                    <img src="styles/img/right.png" class="next-btn">
                 </ul>
             </div>
         </div>
 
         <div class="slider">
+            <div class="slider__item">
+                <img class="slider__item-photo" src="styles/img/sliderPhoto1.png">
+                <div style="margin: 33px;">
+                    <span class="slider__item-name">
+                        Збір всієї необхідної супровідної вантаж документації, страхування, розмитнення і т.д.
+                    </span>
+                    <div class="slider__item-whiteLine"></div>
+                    <p class="slider__item-text">Збір всієї необхідної супровідної вантаж документації, страхування, розмитнення і т.д.</p>
+                </div>
+
+            </div>
+
             <div class="slider__item">
                 <img class="slider__item-photo" src="styles/img/sliderPhoto1.png">
                 <div style="margin: 33px;">
@@ -300,10 +330,12 @@
                 <li class="footer__link-phone"><img src="styles/img/phone.png"><a href="tel:+380954573956" style="color: white; text-decoration: none;">+38 (095) 457-39-56</a></li>
                 <li class="footer__link-instagram"><img src="styles/img/instagram.png"><a href="https://www.instagram.com/superstelya777/" style="color: white; text-decoration: none;">superstelya777</a></li>
             </ul>
-            <img src="styles/img/up.png" class="footer__button">
+            <img src="styles/img/up.png" class="footer__button" onclick="scrollToTop()">
         </div>
     </footer>
     <script src="script.js"></script>
+    <script src="slider.js"></script>
+    <script src="scroll.js"></script>
 </body>
 
 </html>
