--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
             <img src="styles/img/lines.png" class="header__lines">
         </div>
         <div>
-            <h1 class="header__highText">Монтаж натяжних стель</h1>
+            <h1 class="header__highText">Натяжні стелі</h1>
             <h4 class="header__underText">Розробка дизайну та освітлення<br>стельового простору</h4>
         </div>
     </header>
