--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="styles/style.min.css" />
+    <link rel="stylesheet" href="output.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
     <link
       rel="stylesheet"
       type="text/css"
@@ -20,9 +21,29 @@
 
   <body>
     <header>
+      <div class="menu">
+        <div class="menu__close">
+          <img src="../src/styles/img/close.png" alt="" />
+        </div>
+        <div class="menu__main">
+          <h3>Профільні системи:</h3>
+          <div></div>
+          <h3>Освітлення:</h3>
+          <div></div>
+          <h3>Наші цінності:</h3>
+          <div></div>
+          <h3>Етапи нашої роботи</h3>
+          <div></div>
+          <h3>Інформація про обʼєкти</h3>
+          <div class="menu__footer">
+            <h3>+38 (095) 457-39-56</h3>
+            <h3>superstelya777</h3>
+          </div>
+        </div>
+      </div>
       <div class="header__div">
-        <img src="styles/img/logo.png" class="header__logo" />
-        <img src="styles/img/phone.png" class="header__phone" />
+        <img src="../src/styles/img/logo.png" class="header__logo" />
+        <img src="../src/styles/img/phone.png" class="header__phone" />
         <p class="header__phonenumber">
           <a
             href="tel:+380954573956"
@@ -30,10 +51,10 @@
             >+38 (095) 457-39-56</a
           >
         </p>
-        <img src="styles/img/lines.png" class="header__lines" />
+        <img src="../src/styles/img/lines.png" class="header__lines" />
       </div>
       <div>
-        <h1 class="header__highText">Натяжні стелі</h1>
+        <h1 class="header__highText">Монтаж натяжних стель</h1>
         <h4 class="header__underText">
           Розробка дизайну та освітлення<br />стельового простору
         </h4>
@@ -41,16 +62,15 @@
     </header>
 
     <main>
-      <div class="chapter" style="margin-top: 15em">
-        <div class="chapter__item">
-          <h2 class="chapter__item-text">
-            Ми пропонуємо сучасні профільні системи та освітлення
-          </h2>
-        </div>
-        <div class="chapter__name">
-          <h3 class="chapter__name-text">Профільні системи:</h3>
-        </div>
+      <div class="chapter__first">
+        <!-- <div class="chapter__item"> -->
+        <h2 class="chapter__item-text margin-x">
+          Ми пропонуємо сучасні профільні системи та освітлення
+        </h2>
+        <h3 class="chapter__name-text__characteristics">Профільні системи:</h3>
       </div>
+      <!-- <div class="chapter__name"></div> -->
+      <!-- </div> -->
       <div class="yellow_line"></div>
 
       <div class="chapter" style="flex-direction: row-reverse; width: 60%">
@@ -58,51 +78,53 @@
           <ul class="">
             <li onclick="showPhotoFirst()" class="chapter__list__item">
               <img
-                src="styles/img/list.gif"
+                src="../src/styles/img/list.gif"
                 id="listFirstImage"
                 class="chapter__list__item-image"
               />
-              <p class="chapter__list__item-text">Тіньовий</p>
+              <p class="chapter__list__item-text" id="listFirstText">
+                Тіньовий
+              </p>
             </li>
             <div class="chapter__list__item-active-first" id="listFirst">
-              <img src="styles/img/photo_2023-06-28 16.30.png" />
+              <img src="../src/styles/img/photo_2023-06-28 16.30.png" />
             </div>
 
             <li onclick="showPhotoSecond()">
-              <img src="styles/img/list.gif" id="listSecondImage" />
-              <p class="chapter__list__item-text">Резинова заглушка</p>
+              <img src="../src/styles/img/list.gif" id="listSecondImage" />
+              <p class="chapter__list__item-text" id="listSecondText">
+                Резинова заглушка
+              </p>
             </li>
             <div class="chapter__list__item-active-second" id="listSecond">
-              <img src="styles/img/photo_2023-06-28 16.30.png" />
+              <img src="../src/styles/img/photo_2023-06-28 16.30.png" />
             </div>
 
             <li onclick="showPhotoThird()">
-              <img src="styles/img/list.gif" id="listThirdImage" />
-              <p class="chapter__list__item-text">Безвставочний</p>
+              <img src="../src/styles/img/list.gif" id="listThirdImage" />
+              <p class="chapter__list__item-text" id="listThirdText">
+                Безвставочний
+              </p>
             </li>
             <div class="chapter__list__item-active-third" id="listThird">
-              <img src="styles/img/photo_2023-06-28 16.30.png" />
+              <img src="../src/styles/img/photo_2023-06-28 16.30.png" />
             </div>
 
             <li onclick="showPhotoFourth()">
-              <img src="styles/img/list.gif" id="listFourthImage" />
-              <p class="chapter__list__item-text">Парящий</p>
+              <img src="../src/styles/img/list.gif" id="listFourthImage" />
+              <p class="chapter__list__item-text" id="listFourthText">
+                Парящий
+              </p>
             </li>
             <div class="chapter__list__item-active-fourth" id="listFourth">
-              <img src="styles/img/photo_2023-06-28 16.30.png" />
+              <img src="../src/styles/img/photo_2023-06-28 16.30.png" />
             </div>
           </ul>
         </div>
       </div>
 
       <div class="chapter">
-        <div class="chapter__item"></div>
-
-        <div class="chapter__name">
-          <h3 class="chapter__name-text">
-            <p class="chapter__name-text-align">Освітлення:</p>
-          </h3>
-        </div>
+        <h3 class="chapter__name-text__light">Освітлення:</h3>
       </div>
       <div class="yellow_line"></div>
 
@@ -110,72 +132,87 @@
         <div class="chapter__list">
           <ul class="">
             <li class="chapter__list__item" onclick="showPhotoFifth()">
-              <img src="styles/img/list.gif" id="listFifthImage" />
-              <p class="chapter__list__item-text">Трекові системи</p>
+              <img src="../src/styles/img/list.gif" id="listFifthImage" />
+              <p class="chapter__list__item-text" id="listFifthText">
+                Трекові системи
+              </p>
             </li>
             <div class="chapter__list__item-active-fourth" id="listFifth">
-              <img src="styles/img/photo_2023-06-28 16.30.png" />
+              <img src="../src/styles/img/photo_2023-06-28 16.30.png" />
             </div>
             <li onclick="showPhotoSixth()">
-              <img src="styles/img/list.gif" id="listSixthImage" />
-              <p class="chapter__list__item-text">
+              <img src="../src/styles/img/list.gif" id="listSixthImage" />
+              <p class="chapter__list__item-text" id="listSixthText">
                 Весь спектр люстр <br />та світильників
               </p>
             </li>
             <div class="chapter__list__item-active-fourth" id="listSixth">
-              <img src="styles/img/photo_2023-06-28 16.30.png" />
+              <img src="../src/styles/img/photo_2023-06-28 16.30.png" />
             </div>
             <li onclick="showPhotoSeventh()">
-              <img src="styles/img/list.gif" id="listSeventhImage" />
-              <p class="chapter__list__item-text">Лінійне освітлення</p>
+              <img src="../src/styles/img/list.gif" id="listSeventhImage" />
+              <p class="chapter__list__item-text" id="listSeventhText">
+                Лінійне освітлення
+              </p>
             </li>
             <div class="chapter__list__item-active-fourth" id="listSeventh">
-              <img src="styles/img/photo_2023-06-28 16.30.png" />
+              <img src="../src/styles/img/photo_2023-06-28 16.30.png" />
             </div>
           </ul>
         </div>
       </div>
 
       <div class="chapter">
-        <div class="chapter__item">
-          <h2 style="margin: 0" class="chapter__item-text">
-            Ми - компанія, яка займається монтаженим натяжних стель
-          </h2>
-        </div>
+        <!-- <div class="chapter__item"> -->
+        <h2 style="margin: 0" class="chapter__item-text margin-chapter">
+          Ми - компанія, яка займається монтаженим натяжних стель
+        </h2>
+        <!-- <div class="chapter__name"> -->
+        <h3 class="chapter__name-text__characteristics">Наші цінності:</h3>
+        <!-- </div> -->
+        <!-- </div>
         <div class="chapter__name">
-          <h3 class="chapter__name-text">Наші цінності:</h3>
-        </div>
+        </div> -->
       </div>
 
-      <div class="yellow_line chapter"></div>
+      <div class="yellow_line"></div>
 
       <div class="chapter" style="flex-direction: row-reverse">
         <div class="chapter__list">
           <ul class="chapter__list-box-horizontal">
             <li class="chapter__list__item-horizontal">
-              <img src="styles/img/truth.png" />
+              <img
+                src="../src/styles/img/truth.png"
+                class="chapter__list__item-horizontal-img"
+              />
               <p class="chapter__list__item-text">Чесність</p>
             </li>
             <li class="chapter__list__item-horizontal">
-              <img src="styles/img/clean.png" />
+              <img
+                src="../src/styles/img/clean.png"
+                class="chapter__list__item-horizontal-img"
+              />
               <p class="chapter__list__item-text">Чистота</p>
             </li>
             <li class="chapter__list__item-horizontal" style="margin: 0">
-              <img src="styles/img/modern.png" />
+              <img
+                src="styles/img/modern.png"
+                class="chapter__list__item-horizontal-img"
+              />
               <p class="chapter__list__item-text">Сучасність</p>
             </li>
           </ul>
-          <img src="styles/img/Andrew.png" />
+          <img src="../src/styles/img/Andrew.png" />
         </div>
       </div>
 
       <div class="chapter">
-        <div class="chapter__item">
-          <h2 class="chapter__item-text">Етапи нашої роботи</h2>
-        </div>
-        <div class="chapter__name">
-          <h3 class="chapter__name-text" style="font-size: 90px">01</h3>
-        </div>
+        <!-- <div class="chapter__item"> -->
+        <h2 class="chapter__item-text">Етапи нашої роботи</h2>
+        <h3 class="chapter__name-text" style="font-size: 90px">01</h3>
+        <!-- </div> -->
+        <!-- <div class="chapter__name">
+        </div> -->
       </div>
 
       <div class="yellow_line"></div>
@@ -184,16 +221,14 @@
         <div class="card-box">
           <div class="card__item">
             <div class="card__item-box">
-              <img src="styles/img/call.png" />
+              <img src="../src/styles/img/call.png" />
               <span class="card__item-title">Дзвінок</span>
             </div>
             <p class="card__item-text">
               Отримуємо від вас дзвінок та домовляємось про зустріч та заміри
             </p>
           </div>
-          <div>
-            <img src="styles/img/image%209.png" class="card-image" />
-          </div>
+          <img src="../src/styles/img/image%209.png" class="card-image" />
         </div>
       </div>
 
@@ -212,7 +247,7 @@
         <div class="card-box">
           <div class="card__item">
             <div class="card__item-box">
-              <img src="styles/img/pencil.png" />
+              <img src="../src/styles/img/pencil.png" />
               <span class="card__item-title">Заміри</span>
             </div>
             <p class="card__item-text">
@@ -221,9 +256,7 @@
               побажання
             </p>
           </div>
-          <div>
-            <img class="card-image" src="styles/img/image%2012.png" />
-          </div>
+          <img class="card-image" src="../src/styles/img/image%2012.png" />
         </div>
       </div>
 
@@ -242,7 +275,7 @@
         <div class="card-box">
           <div class="card__item">
             <div class="card__item-box">
-              <img src="styles/img/instruments.png" />
+              <img src="../src/styles/img/instruments.png" />
               <span class="card__item-title">Монтаж</span>
             </div>
             <p class="card__item-text">
@@ -251,9 +284,7 @@
               вас
             </p>
           </div>
-          <div>
-            <img class="card-image" src="styles/img/image%2011.png" />
-          </div>
+          <img class="card-image" src="../src/styles/img/image%2011.png" />
         </div>
       </div>
 
@@ -272,7 +303,7 @@
         <div class="card-box">
           <div class="card__item">
             <div class="card__item-box">
-              <img src="styles/img/result.png" />
+              <img src="../src/styles/img/result.png" />
               <span class="card__item-title">Результат</span>
             </div>
             <p class="card__item-text">
@@ -280,9 +311,7 @@
               "сюрпризів"
             </p>
           </div>
-          <div>
-            <img class="card-image" src="styles/img/image%2010.png" />
-          </div>
+          <img class="card-image" src="styles/img/image%2010.png" />
         </div>
       </div>
 
@@ -294,23 +323,27 @@
 
       <div class="yellow_line"></div>
 
-      <div class="chapter" style="flex-direction: row-reverse">
-        <div class="chapter__list">
-          <ul class="chapter__list-box-horizontal">
-            <img
-              src="styles/img/left.png"
-              style="margin-right: 20px"
-              class="previous-btn"
-            />
-            <img src="styles/img/right.png" class="next-btn" />
-          </ul>
+      <div class="chapter" style="display: block">
+        <div
+          class="chapter__list-box-horizontal"
+          style="justify-content: space-between"
+        >
+          <img
+            src="../src/styles/img/left.png"
+            style="margin-right: 20px"
+            class="previous-btn"
+          />
+          <img src="../src/styles/img/right.png" class="next-btn" />
         </div>
       </div>
 
       <div class="wrapper">
         <div class="slider">
           <div class="slider__item">
-            <img class="slider__item-photo" src="styles/img/sliderPhoto1.png" />
+            <img
+              class="../src/slider__item-photo"
+              src="styles/img/sliderPhoto1.png"
+            />
             <div style="margin: 33px">
               <span class="slider__item-name">
                 Збір всієї необхідної супровідної вантаж документації,
@@ -325,7 +358,10 @@
           </div>
 
           <div class="slider__item">
-            <img class="slider__item-photo" src="styles/img/sliderPhoto1.png" />
+            <img
+              class="slider__item-photo"
+              src="../src/styles/img/sliderPhoto1.png"
+            />
             <div style="margin: 33px">
               <span class="slider__item-name">
                 Збір всієї необхідної супровідної вантаж документації,
@@ -340,7 +376,10 @@
           </div>
 
           <div class="slider__item">
-            <img class="slider__item-photo" src="styles/img/sliderPhoto1.png" />
+            <img
+              class="slider__item-photo"
+              src="../src/styles/img/sliderPhoto1.png"
+            />
             <div style="margin: 33px">
               <span class="slider__item-name">
                 Збір всієї необхідної супровідної вантаж документації,
@@ -355,7 +394,10 @@
           </div>
 
           <div class="slider__item">
-            <img class="slider__item-photo" src="styles/img/sliderPhoto1.png" />
+            <img
+              class="slider__item-photo"
+              src="../src/styles/img/sliderPhoto1.png"
+            />
             <div style="margin: 33px">
               <span class="slider__item-name">
                 Збір всієї необхідної супровідної вантаж документації,
@@ -377,14 +419,14 @@
         <h2 class="footer__name">Контакти</h2>
         <ul class="footer__link">
           <li class="footer__link-phone">
-            <img src="styles/img/phone.png" /><a
+            <img src="../src/styles/img/phone.png" /><a
               href="tel:+380954573956"
               style="color: white; text-decoration: none"
               >+38 (095) 457-39-56</a
             >
           </li>
           <li class="footer__link-instagram">
-            <img src="styles/img/instagram.png" /><a
+            <img src="../src/styles/img/instagram.png" /><a
               href="https://www.instagram.com/superstelya777/"
               style="color: white; text-decoration: none"
               >superstelya777</a
@@ -392,14 +434,16 @@
           </li>
         </ul>
         <img
-          src="styles/img/up.png"
+          src="../src/styles/img/up.png"
           class="footer__button"
           onclick="scrollToTop()"
         />
       </div>
     </footer>
+
     <script src="script.js"></script>
     <script src="scroll.js"></script>
+    <script src="menu.js"></script>
     <script
       type="text/javascript"
       src="//code.jquery.com/jquery-1.11.0.min.js"
