--- a/public/index.html
+++ b/public/index.html
@@ -36,26 +36,25 @@
           <div class="menu__line"></div>
           <h3 class="menu__main-text">Інформація про обʼєкти</h3>
           <div class="menu__line"></div>
-          <div class="menu__footer">
-            <div class="menu__footer-item">
-              <div>
-                <img src="../src/styles/img/phone.png" alt="" />
-              </div>
-              <h3 class="menu__footer-text" href="tel:+380954573956">
-                +38 (095) 457-39-56
-              </h3>
+        </div>
+        <div class="menu__footer">
+          <div class="menu__footer-item">
+            <div>
+              <img src="../src/styles/img/phone.png" alt="" />
             </div>
-            <div class="menu__footer-item">
-              <div>
-                <img src="../src/styles/img/instagram.png" alt="" />
-              </div>
-              <h3
-                class="menu__footer-text"
-                href="https://www.instagram.com/superstelya777/"
-              >
+            <h3 class="menu__footer-text">
+              <a href="tel:+380954573956"> +38 (095) 457-39-56</a>
+            </h3>
+          </div>
+          <div class="menu__footer-item">
+            <div>
+              <img src="../src/styles/img/instagram.png" alt="" />
+            </div>
+            <h3 class="menu__footer-text">
+              <a href="https://www.instagram.com/superstelya777/">
                 superstelya777
-              </h3>
-            </div>
+              </a>
+            </h3>
           </div>
         </div>
       </div>
@@ -205,7 +204,10 @@
       <div class="yellow_line"></div>
 
       <div class="chapter">
-        <div class="chapter__list" style="align-items: flex-end">
+        <div
+          class="chapter__list"
+          style="align-items: flex-end; display: flex; flex-direction: column"
+        >
           <ul class="chapter__list-box-horizontal">
             <li class="chapter__list__item-horizontal">
               <img
